# mn-DWM3001CDK-basics

./: .clang-format  CMakeLists.txt  README.md  decawave_dwm3001cdk_nrf52833.overlay  prj.conf
dts/bindings/qorvo,dw3000/: qorvo,dw3000.yaml
lib/dwt_uwb_driver/: CMakeLists.txt  LicenseRef-QORVO-1.txt  deca_compat.c
scripts/: read_usb.py
src/: main.c
src/threads/: dw3000_thread.c
src/threads/include/: dw3000_thread.h
